refactor: rebrand to "Arena Forge" and improve UI components
- Updated site title, descriptions, and main headings to "Arena Forge".
- Introduced `ElementWithBackground` component for managing background elements with YouTube videos or static images.
- Implemented default background image on the home page.
- Created `ThemeConfig` component for configuring battle themes dynamically.
- Added `youtubeVideoIdParser` helper function for extracting video IDs from URLs.
- Removed unused error logging from `LoadingOrError` component.
- Adjusted iframe configurations for a smoother user experience.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Make Tricking Battles Awesome" />
+		<meta name="description" content="Forge Awesome Battles" />
 		<meta name="theme-color" content="#42b883" />
-		<title>Tricking Battle Visualizer</title>
+		<title>Arena Forge</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
